[project]
name = "findchats"
version = "0.1.0"
description = "Telegram bot that finds public city-related Telegram chats"
requires-python = ">=3.11"
dependencies = [
  "aiogram>=3.13,<4",
  "pydantic>=2.7,<3",
  "pydantic-settings>=2.3,<3",
  "python-dotenv>=1.0,<2",
  "telethon>=1.36,<2",
  "Unidecode>=1.3,<2",
]

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
